swen430as2/tests/invalid/is/Is_Invalid_08-TC05.while
type nint is null|int
type Rec1 is { int f1, int f2 }

bool f(Rec1 r) {
    return r.f[0] is int;
}
